--- a/my-client/styles/StartingQuestion.module.css
+++ b/my-client/styles/StartingQuestion.module.css
@@ -1,10 +1,11 @@
 .StartingQuestionTitle {
     min-height: 100vh;
-    min-width: 100ch;
+    min-width: 100vw;
     display: flex;
     align-items: center;
     justify-content: center;
     background-color: #343a40;
     color: #eaeaea;
     font-size: large;
+    font-family: "Arial", sans-serif;
 }
